fix path icons and add custom scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,15 +16,29 @@
   color: #020202;
 }
 
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+* {
+  font-family: Noto Sans, sans-serif !important;
 }
 
-.full-height {
+/* viewport */
+.viewport {
   min-height: calc(100vh - 98px);
+}
+
+/* scrollbar */
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #e5e5e5;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #e5e5e5;
 }
